--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                      <div class="limit-box">
                         <nav class="main-menu">
                            <ul class="menu-area-main">
-                              <li class="active"> <a href="index.html">Home</a> </li>
-                              <li> <a href="about.html">Layanan</a> </li>
-                              <li> <a href="product.html">product</a> </li>
-                              <li> <a href="blog.html"> Mengapa kami</a> </li>
+                              <li class="nav-item active"> <a class="page-scroll" href="#home">Home</a> </li>
+                              <li class="nav-item"> <a class="page-scroll" href="#Layanan">Layanan</a> </li>
+                              <li class="nav-item"> <a class="page-scroll" href="#Product">Product</a> </li>
+                              <li class="nav-item"> <a class="page-scroll" href="#Mengapakami"> Mengapa kami</a> </li>
                               <li> <a href="contact.html">Contact</a> </li>
                               
                            </ul>
@@ -143,7 +143,7 @@
                      <div class="carousel-caption relative">
                         <h1>Video <br> <strong class="black_bold">Terbaru </strong><br>
                            <strong class="yellow_bold">kami </strong></h1>
-                        <p>Jangan lewatkan Video video terbaru kami ya! </p>
+                        <p>Jangan lewatkan Video video terbaru kami </p>
                         <a  href=https://www.youtube.com/channel/UCayIv82B5RJCyqin4I-UGlw">Menuju Youtube Channel</a>
                      </div>
                   </div>
@@ -154,7 +154,7 @@
                      <div class="carousel-caption relative">
                         <h1>Unggahan <br> <strong class="black_bold">Terbaru </strong><br>
                            <strong class="yellow_bold">Kami </strong></h1>
-                        <p>Jangan lewatkan Unggahan terbaru kami ya!<br></p>
+                        <p>Jangan lewatkan Unggahan terbaru kami<br></p>
                         <a  href="https://www.instagram.com/sthira.id/channel/">Menuju Akun Instagram</a>
                      </div>
                   </div>
